spec/fixtures/make-gitops-namespace-test-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: make-gitops-namespace-test-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "MoJD"
    cloud-platform.justice.gov.uk/application: "gitops-test-app"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: david.salgado@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://foo.bar.baz"
---
apiVersion: v1
kind: Namespace
metadata:
  name: concourse-webops
